--- a/SampleCMS/CMS/Views/Articles/Create.cshtml
+++ b/SampleCMS/CMS/Views/Articles/Create.cshtml
@@ -1,18 +1,16 @@
 ﻿@model CMS.ViewModels.ArticleViewModel
 
 @{
-    ViewBag.Title = "View";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>View</h2>
+<h2>Create an Article</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ArticleViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
